--- a/ASP.NET/Areas/Search/Views/Search/Index.cshtml
+++ b/ASP.NET/Areas/Search/Views/Search/Index.cshtml
@@ -146,7 +146,7 @@
 
 
 
-        )">«</a>
+        )" @*style="border-style:solid; border-color:blue"*@ >«</a>
         @for (int i = 1; i <= ViewBag.maxpage; i++)
         {
 
@@ -162,7 +162,7 @@
 
 
 
-        )" style="text-align:center">@i</a>
+        )" @*style="border-style:solid; border-color:blue"*@>@i</a>
 
 
         }
@@ -178,7 +178,7 @@
 
 
 
-        )">»</a>
+        )" @*style="border-style:solid; border-color:blue"*@>»</a>
     </div>
 
 </body>
