--- a/ASP.NET/Views/Shared/_Layout.cshtml
+++ b/ASP.NET/Views/Shared/_Layout.cshtml
@@ -20,9 +20,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("新增", "Insert/Index", "Insert", new { area = "" }, new { @class = "navbar-brand", @style = "text-align:center;" })
-                @Html.ActionLink("修改", "Update/Index", "Update", new { area = "" }, new { @class = "navbar-brand", @style = "text-align:center;" })
-                @Html.ActionLink("刪除", "Delete/Index", "Delete", new { area = "" }, new { @class = "navbar-brand", @style = "text-align:center;" })
-                @Html.ActionLink("查詢", "Index", "Search", new { area = "" }, new { @class = "navbar-brand", @style = "text-align:center;" })
+                @Html.ActionLink("查詢", "Search/Index", "Search", new { area = "" }, new { @class = "navbar-brand", @style = "text-align:center;" })
 
 
 
